-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.1015 2011-05-09 19:03:07 guru Exp $
-----------------------------------------------------------------------------------------

2011-05-09	pwessel
	* minmax_func.c:	Now honors the column-specific formatting.
	* grdinfo_func.c:	---"---
	* grdfft_func.c:	Now -D scale is 1 by default.

2011-05-08	pwessel
	* *.c:			All deprecated options under #ifdef GMT_COMPAT now will give
				information about the new option.

2011-05-07	pwessel
	* gmt_grdio.c:		Failed to create proper old-style v3 netcdf file if selected
				for the output in grdblend.
	* gmt_agc_io.c:		Needed char floatvalue[PARAMSIZE+1], with the 1 to hold final \0
	* grdblend_func.c:	Now supports all grid formats either directly or via reformatting.
	* gmt_*.c:		All non-public functions start with gmt_ rather than GMT_.

2011-05-05	pwessel
	* gmtconvert_func.c:	The -T was applied before reading, which reset -m.
	* mapproject_func.c:	The -L would set output types as lon/lat even for Cartesian data.

2011-05-04	pwessel
	* gmtapi_util.c:	Set BCs for all grids regardless of read-source, even if
				read-only (REF) since we don't change grid, just the pad
				which is not considered part of the data.
	* imgsrc/img2grd_func.c:	Made clear that -D, -I, -T are optional and added
				-n to change how interpolations are done.  Also allow -S
				with no scale which will infer scale from filename.
	* splitxyz_func.c:	Now working, improved -N after gmtconvert's -D.

2011-05-03	pwessel
	* grdhisteq_func.c:	Now treats input grids as read-only.
	* greenspline_func.c:	Now treats input grids as read-only.
	* grdfft_func.c:	Now treats input grids as read-only.
	* grdvolume_func.c:	Now treats input grids as read-only.
	* grdvector_func.c:	Now treats input grids as read-only.
	* pstext_func.c:	The -A can reset the text angle but also needs to reset justification